--- a/AdminByRequestChallenge.API/AdminByRequestChallenge.API.csproj
+++ b/AdminByRequestChallenge.API/AdminByRequestChallenge.API.csproj
@@ -4,13 +4,13 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>84f23959-5421-44ed-b0c3-6ed3a5cd744e</UserSecretsId>
+    <UserSecretsId>037eeb40-befb-4ae2-a2d2-a9bd0e6623ee</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
-	<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+	<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
