Added docker, datacontext, endpoints, and controllers

--- a/AdminByRequestChallenge.API/AdminByRequestChallenge.API.csproj
+++ b/AdminByRequestChallenge.API/AdminByRequestChallenge.API.csproj
@@ -13,4 +13,10 @@
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+	<Content Include="Assets\developers.gif">
+	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</Content>
+  </ItemGroup>
+
 </Project>
