--- a/AdminByRequestChallenge.Core/AdminByRequestChallenge.Core.csproj
+++ b/AdminByRequestChallenge.Core/AdminByRequestChallenge.Core.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Repositories\SessionRedisRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AdminByRequestChallange.Contracts\AdminByRequestChallange.Contracts.csproj" />
     <ProjectReference Include="..\AdminByRequestChallenge.DataContext\AdminByRequestChallenge.DataContext.csproj" />
   </ItemGroup>
