--- a/AdminByRequestChallenge.Core/AdminByRequestChallenge.Core.csproj
+++ b/AdminByRequestChallenge.Core/AdminByRequestChallenge.Core.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.7" />
+    <PackageReference Include="Scrutor" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup>
