--- a/AdminByRequestChallenge.API/AdminByRequestChallenge.API.csproj
+++ b/AdminByRequestChallenge.API/AdminByRequestChallenge.API.csproj
@@ -11,6 +11,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.2" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.Graylog" Version="3.1.1" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
 	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
